# Transaction-KG

./: .gitignore  details.py  pyproject.toml
notebooks/: Full_Business_KG.ipynb  kg_manager.ipynb
src/: README.md  main.py  pyproject.toml
src/config/: settings.py
src/neo4j_manager/: helper.py  kg_manager.py  loader.py
